interfaces do git.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SENAI</title>
+    <link rel="stylesheet" href="styles.css">
  </head>
  <body>
     <h2>Carregando uma imagem</h2>
-     <img src="assets/images.jpg" alt="">
+     <img src="assets/bruno1.jpeg" alt="">
 
 
-    <h1>Hierarquia de título</h1>
-    <h2>Hierarquia de título</h2>
-    <h3>Hierarquia de título</h3>
-    <h4>Hierarquia de título</h4>
-    <h5>Hierarquia de título</h5>
-    <h6>Hierarquia de título</h6>
+
+    <h1>BARBEARIA AFRO</h1>
+  
  </body>
 </html>
